# cxxsignal

./: CMakeLists.txt  Doxyfile.in  README.md
.github/workflows/: cmake_dbg.yml
include/: CMakeLists.txt  cxxsignal.hpp
include/cxxsignal/: Default.hpp  Ignore.hpp  SignalHandler.hpp
src/: CMakeLists.txt  Ignore_Default.cpp  SignalHandler.cpp
test/: CMakeLists.txt  test.cpp  test_wait.cpp
